# restaurant-assignment

./: .rustfmt.toml  Cargo.toml  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
restaurant-client/: Cargo.toml
restaurant-client/src/: main.rs
restaurant-server/: Cargo.toml
restaurant-server/src/: app.rs  main.rs  state.rs  table_orders_service.rs
restaurant-server/src/api/v0/: client_params.rs  mod.rs  routes.rs  view_models.rs
restaurant-server/src/models/: menu.rs  mod.rs  orders.rs
restaurant-server/src/persistence/: memory_persistence.rs  mod.rs  persistence.rs
restaurant-server/src/tests/: app_integration_tests.rs  memory_persistence_tests.rs
