[package]
name = "restaurant-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1.2"
mime = "0.3.17"
serde_json = "1.0.133"
tower = { version = "0.5.1", features = ["util"] }
